--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./css/normalize.css">
    <link rel="stylesheet" href="./css/style.css">
-   <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
    <title>Online Cinema GLO</title>
 </head>
 <body>
@@ -33,7 +33,137 @@
          </div>
       </header>
       <aside class="aside box-init"><p>aside</p></aside>
-      <main class="main"><p>main</p></main>
+      <main class="main">
+         <section class="main-display">
+            <div class="main-display__trailer">
+               <div class="main-display__views">Views 77k</div>
+               <div class="main-display__name">
+                  <h1 class="main-display__header">Spider-Man: No Way Home</h1>
+                  <div class="main-display__date">Feb 2021</div>
+               </div>
+               <div class="button-play-wrap">
+                  <div class="button-play" type="button"></div>
+               </div>
+            </div>
+            <div class="main-display-trending">
+               <div class="title">
+                  <div class="title__left">
+                     <h2 class="title__main">Continue Watching</h2>
+                     <div class="title__count">4 Movies</div>
+                  </div>
+                  <div class="title__right">
+                     <span>All movies</span>
+                     <img src="./img/arrow.svg" alt="arrow-type">
+                  </div>
+               </div>
+               <div class="trending">
+                  <div class="trending__item">
+                     <div class="trending__plash">
+                        <span>#1 Trending 🔥</span>
+                        <!--<img src="" alt="icon fire"> !-->
+                     </div>
+                     <div class="trending__footer">
+                        <div class="trending__footer-left">
+                           <div class="button-play-wrap small">
+                              <div class="button-play" type="'button"></div>
+                           </div>
+                           <div class="trending__title">
+                              <h3 class="trending__header">Spider-Man: No Way Home</h3>
+                              <div class="trending__date">Feb 2021</div>
+                           </div>
+                        </div>
+                        <div class="trending__time">02:30:00</div>
+                     </div>
+                  </div>
+                  <div class="trending__item">
+                     <div class="trending__footer">
+                        <div class="trending__footer-left">
+                           <div class="button-play-wrap small">
+                              <div class="button-play" type="'button"></div>
+                           </div>
+                           <div class="trending__title">
+                              <h3 class="trending__header">Spider-Man: No Way Home</h3>
+                              <div class="trending__date">Feb 2021</div>
+                           </div>
+                        </div>
+                        <div class="trending__time">02:30:00</div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="main-display-trending">
+               <div class="title">
+                  <div class="title__left">
+                     <h2 class="title__main">Popular movies 2021</h2>
+                  </div>
+                  <div class="title__right">
+                     <span>All movies</span>
+                     <img src="./img/arrow.svg" alt="arrow-type">
+                  </div>
+               </div>
+               <div class="popular">
+                  <div class="popular__item">
+                     <div class="popular__footer">
+                        <div class="button-play-wrap small-plus">
+                           <div class="button-play"type="button"></div>
+                        </div>
+                        <div class="popular__footer-left">
+                           <div class="popular__title">
+                              <h3 class="popular__header">Spider-Man: No Way Home</h3>
+                              <div class="popular__date">Feb 2021</div>
+                           </div>
+                        </div>
+                        <div class="popular__rating">
+                           <div class="popular__img">
+                              <img src="./img/Star 1.svg" alt="star">
+                           </div>
+                           <span>4,7</span>
+                        </div>
+                     </div>
+                  </div>
+                     <div class="popular__item">
+                     <div class="popular__footer">
+                        <div class="popular__footer-left">
+                           <div class="button-play-wrap small-plus">
+                              <div class="button-play"type="button"></div>
+                           </div>
+                           <div class="popular__title">
+                              <h3 class="popular__header">Spider-Man: No Way Home</h3>
+                              <div class="popular__date">Feb 2021</div>
+                           </div>
+                        </div>
+                        <div class="popular__rating">
+                           <div class="popular__img">
+                              <img src="./img/Star 1.svg" alt="star">
+                           </div>
+                           <span>4,7</span>
+                        </div>
+                     </div>
+                     </div>
+                     <div class="popular__item">
+                     <div class="popular__footer">
+                        <div class="popular__footer-left">
+                           <div class="button-play-wrap small-plus">
+                              <div class="button-play"type="button"></div>
+                           </div>
+                           <div class="popular__title">
+                              <h3 class="popular__header">Spider-Man: No Way Home</h3>
+                              <div class="popular__date">Feb 2021</div>
+                           </div>
+                        </div>
+                        <div class="popular__rating">
+                           <div class="popular__img">
+                              <img src="./img/Star 1.svg" alt="star">
+                           </div>
+                           <span>4,7</span>
+                        </div>
+                     </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+      </main>
    </div>
 
    <script src="./js/main.js"></script>
