--- a/index.html
+++ b/index.html
@@ -33,38 +33,41 @@
          </div>
       </header>
       <aside class="aside box-init">
-         <div class="aside__title">
-            <div class="aside__header">New trailers</div>
-            <div class="aside__sort">
-               <div class="aside__sort-text">Sort By</div>
-               <div class="aside__sort-select">
-                  <span>Today</span>
-                  <div class="aside__sort-img">
-                     <img src="./img/Polygon 2.svg" alt="arrow">
-                     <img src="./img/Polygon 3.svg" alt="arrow">
+         <div class="aside__wrap">
+            <div class="aside__top">
+               <div class="aside__title">
+                  <div class="aside__header">New trailers</div>
+                  <div class="aside__sort">
+                     <div class="aside__sort-text">Sort By</div>
+                     <div class="aside__sort-select">
+                        <span>Today</span>
+                        <div class="aside__sort-img">
+                           <img src="./img/Polygon 2.svg" alt="arrow">
+                           <img src="./img/Polygon 3.svg" alt="arrow">
+                        </div>
+                     </div>
                   </div>
                </div>
-            </div>
-         </div>
-         <div class="aside__item">
-            <div class="aside__views">Views 4.5k</div>
-            <div class="aside__footer">
-               <div class="aside__item-name">Batman 2022</div>
-               <div class="aside__item-date">Dec 2022</div>
-            </div>
-            <div class="button-play-wrap">
-               <div class="button-play"></div>
-            </div>
-         </div>
-         <div class="aside__item">
-            <div class="aside__views">Views 4.5k</div>
-            <div class="aside__footer">
-               <div class="aside__item-name">Batman 2022</div>
-               <div class="aside__item-date">Dec 2022</div>
-            </div>
-            <div class="button-play-wrap">
-               <div class="button-play"></div>
-            </div>
+               <div class="aside__item">
+                  <div class="aside__views">Views 4.5k</div>
+                  <div class="aside__footer">
+                     <div class="aside__item-name">Batman 2022</div>
+                     <div class="aside__item-date">Dec 2022</div>
+                  </div>
+                  <div class="button-play-wrap">
+                     <div class="button-play"></div>
+                  </div>
+               </div>
+               <div class="aside__item">
+                  <div class="aside__views">Views 4.5k</div>
+                  <div class="aside__footer">
+                     <div class="aside__item-name">Batman 2022</div>
+                     <div class="aside__item-date">Dec 2022</div>
+                  </div>
+                  <div class="button-play-wrap">
+                     <div class="button-play"></div>
+                  </div>
+               </div>
          </div>
          <div class="aside__bottom">
             <div class="aside__favourite">
@@ -77,7 +80,7 @@
                   <div class="aside__genre green">Comedy</div>
                </div>
             </div>
-            <div class="aside__footer">
+            <div class="aside__footer-bottom">
                <div class="aside__add">
                   <div class="aside__add-round">+</div>
                   <span>Add your favourite genres</span>
@@ -88,6 +91,7 @@
                   <div class="aside__genre gray">Comedy</div>
             </div>
          </div>
+      </div>
       </aside>
       <main class="main">
          <section class="main-display">
@@ -220,6 +224,15 @@
             </div>
          </section>
       </main>
+   </div>
+
+   <div class="modal">
+      <div class="modal__inner">
+         <iframe class="video" width="100%" height="100%" src="https://www.youtube.com/embed/8p0nlrjs9mM" 
+         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+          encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </iframe>
+      </div>
    </div>
 
    <script src="./js/main.js"></script>
